cmake_minimum_required(VERSION 3.17)
project(wengkai)

set(CMAKE_CXX_STANDARD 14)

add_executable(wengkai main.cpp)
add_executable(singlelist SingleLinkedList.cpp)
add_executable(bitSegement BitSegement.cpp)
add_executable(dynamic_mem dynamic_mem.cpp)
add_executable(func_callback func_callback.cpp)
add_executable(struct_union struct_union.cpp)